# bball-app-data_consumption

./: .gitignore  DATABASE_SCHEMA_UPDATED_TEMP.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: branches.yml  dependabot-automerge.yml  dependabot-build.yml  main.yml
src/database/: database.py
src/messaging/: games_handler.py  handler.py  players_game_stats_handler.py  players_index_handler.py  players_injuries_handler.py  teams_static_handler.py
src/messaging/schemas/: games-raw-schema.json  injury-report-raw-schema.json  lambda-event-schema.json  player-game-logs-raw-schema.json  player-index-raw-schema.json  teams-static-raw-schema.json
src/model/: models.py
src/repository/: games_repository.py  players_game_stats_repository.py  players_index_repository.py  players_injuries_repository.py  repository.py  teams_static_repository.py
src/service/: games_service.py  players_game_stats_service.py  players_index_service.py  players_injuries_service.py  service.py  teams_static_service.py
terraform/resources/: backend.tf  cloudwatch-alarms.tf  data.tf  dynamodb.tf  event-bridge-event-rule-scheduler.tf  lambda.tf  live.tfvars  nonlive.tfvars  outputs.tf  scheduler.tf  variables.tf
tests/integration/: test_dynamodb_integration.py  test_games_integration.py  test_players_game_stats_integration.py  test_players_index_integration.py  test_players_injuries_integration.py  test_teams_static_integration.py
tests/unit/: test_handler.py  test_models.py  test_service.py
(+10 files in other folders)
