[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bball-app-data-consumption"
version = "0.1.0"
description = "Basketball app data consumption Lambda - teams-static"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.34.162",
    "jsonschema==4.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "poethepoet==0.39.0",
    "moto[dynamodb,s3]==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, mocked)",
    "integration: Integration tests (require mocked AWS)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.poe.tasks]
test = "pytest tests/unit/"
test-unit = "pytest tests/unit/ -v"
test-integration = "pytest tests/integration/ -v"
test-all = "pytest tests/ -v"
test-cov = "pytest tests/unit/ --cov=src --cov-report=html"
lint = "echo 'Add ruff or flake8 later'"
